; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ofw/extr_ofw_disk.c_g_ofwd_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ofw/extr_ofw_disk.c_g_ofwd_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bio = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.ofwd_softc* }
%struct.ofwd_softc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bio*)* @g_ofwd_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @g_ofwd_start(%struct.bio* %0) #0 {
  %2 = alloca %struct.bio*, align 8
  %3 = alloca %struct.ofwd_softc*, align 8
  store %struct.bio* %0, %struct.bio** %2, align 8
  %4 = load %struct.bio*, %struct.bio** %2, align 8
  %5 = getelementptr inbounds %struct.bio, %struct.bio* %4, i32 0, i32 0
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.ofwd_softc*, %struct.ofwd_softc** %9, align 8
  store %struct.ofwd_softc* %10, %struct.ofwd_softc** %3, align 8
  %11 = load %struct.ofwd_softc*, %struct.ofwd_softc** %3, align 8
  %12 = getelementptr inbounds %struct.ofwd_softc, %struct.ofwd_softc* %11, i32 0, i32 0
  %13 = call i32 @mtx_lock(i32* %12)
  %14 = load %struct.ofwd_softc*, %struct.ofwd_softc** %3, align 8
  %15 = getelementptr inbounds %struct.ofwd_softc, %struct.ofwd_softc* %14, i32 0, i32 1
  %16 = load %struct.bio*, %struct.bio** %2, align 8
  %17 = call i32 @bioq_disksort(i32* %15, %struct.bio* %16)
  %18 = load %struct.ofwd_softc*, %struct.ofwd_softc** %3, align 8
  %19 = getelementptr inbounds %struct.ofwd_softc, %struct.ofwd_softc* %18, i32 0, i32 0
  %20 = call i32 @mtx_unlock(i32* %19)
  %21 = load %struct.ofwd_softc*, %struct.ofwd_softc** %3, align 8
  %22 = call i32 @wakeup(%struct.ofwd_softc* %21)
  ret void
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @bioq_disksort(i32*, %struct.bio*) #1

declare dso_local i32 @mtx_unlock(i32*) #1

declare dso_local i32 @wakeup(%struct.ofwd_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
